--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -9,8 +9,8 @@
 }
 .log_container_section {
   margin: auto;
-  background: rgba(255, 255, 255, 0.1);
-  backdrop-filter: blur(15px);
+  background: rgba(255, 255, 255, 0.12);
+  backdrop-filter: blur(5px);
   border-radius: 0.5rem;
   padding: 2rem 2rem 2rem 2rem;
   width: 50%;
@@ -102,12 +102,14 @@ a {
 }
 
 .success {
-  color: green;
+  color: rgb(0, 130, 0);
   text-align: center;
+  font-size: 22px;
 }
 
 .error {
-  color: rgb(187, 2, 2);
+  color: rgb(222, 0, 0);
+  margin-top: 5px;
 }
 
 /*# sourceMappingURL=main.css.map */
