--- a/src/styles/sass/main.scss
+++ b/src/styles/sass/main.scss
@@ -36,10 +36,12 @@ a {
 }
 
 .success {
-    color: green;
+    color: rgb(0, 130, 0);
     text-align: center;
+    font-size: 22px;
 }
 
 .error {
-    color: rgb(187, 2, 2)
+    color: rgb(222, 0, 0);
+    margin-top: 5px;
 } 
