--- a/src/styles/sass/main.scss
+++ b/src/styles/sass/main.scss
@@ -3,12 +3,12 @@
 
 @font-face {
     font-family: 'Lato';
-    src: url('fonts/Lato-Light.ttf');
+    src: url('fonts/Lato-Regular.ttf');
 }
 
 @font-face {
     font-family: 'Lato-Bold';
-    src: url('fonts/Lato-Regular.ttf');
+    src: url('fonts/Lato-Bold.ttf');
 }
 
 html {
@@ -20,7 +20,7 @@ html {
 
 button {
     border-style: none;
-    border-radius: 0.3rem;
+    border-radius: 0.5rem;
     font-size: 16px;
     cursor: pointer;
     border: 1px solid $tertiary-clr;
@@ -42,6 +42,10 @@ a {
 }
 
 .error {
-    color: rgb(222, 0, 0);
+    color: rgb(219, 19, 19);
     margin-top: 5px;
+    &_center {
+        text-align: center;
+        margin-top: 10px;
+    }
 } 
