--- a/src/styles/sass/main.scss
+++ b/src/styles/sass/main.scss
@@ -14,8 +14,7 @@
 html {
     font-family: 'Lato';
     font-size: 16px;
-    background: url('img/groupomania-bg.jpg');
-    background-attachment: fixed;
+    background: url('img/groupomania-bg.jpg') fixed no-repeat;
 }
 
 button {
