--- a/src/styles/sass/_Log.scss
+++ b/src/styles/sass/_Log.scss
@@ -6,8 +6,7 @@
         flex-direction: column;
 
         &_logo {
-            min-width: 60%;
-            max-width: 50%;
+            width: 300px;
             margin: 50px auto 50px auto;
         }
     }
@@ -19,6 +18,8 @@
         border-radius: 0.5rem;
         padding: 2rem 2rem 2rem 2rem;
         width: 50%;
+        min-width: 250px;
+        max-width: 600px;
     
         &_header {
             display: flex;
