--- a/src/styles/sass/_variables.scss
+++ b/src/styles/sass/_variables.scss
@@ -1,6 +1,6 @@
 $primary-clr: #167899;
-$secondary-clr: #82bacd;
+$secondary-clr: rgba(130, 186, 205, 0.8);
 $tertiary-clr:  #414141;
 
 $bg-section: rgba(255, 255, 255, 0.2);
-$text-btn-logindex-clr: white;
+$text-btn-clr: white;
