--- a/src/styles/sass/_Log.scss
+++ b/src/styles/sass/_Log.scss
@@ -40,7 +40,7 @@
         border: 1px solid rgb(80, 79, 79);
         border-radius: 0.5rem;
         font-size: 16px;
-        background: rgba(255, 255, 255, 0.5);
+        background: rgba(255, 255, 255, 0.65);
         &:focus {
             outline: solid $primary-clr;
             border-color: $primary-clr;
@@ -49,11 +49,11 @@
 }
 
 .btn_form {
+    background-color: $primary-clr;
     width: 100%;
     transition: transform 300ms ease-in-out;
     &:hover {
-        filter: brightness(1.1);
-        transform: scale(1.02);
+         transform: scale(1.02);
     }
 }
 
@@ -68,11 +68,13 @@ button {
 
     &.inactive {
         background-color: $secondary-clr;
-        color: black;
         transition: background-color 300ms ease-in-out;
         &:hover {
             background-color: $primary-clr;
-            color: $text-btn-clr;
         }
     }
+}
+
+.success {
+    margin-top: 10px;
 }
