--- a/src/styles/sass/_variables.scss
+++ b/src/styles/sass/_variables.scss
@@ -1,6 +1,9 @@
-$primary-clr: #167899;
-$secondary-clr: rgba(130, 186, 205, 0.8);
+$primary-clr: #005d6d;
+$secondary-clr: #008dadbd;
 $tertiary-clr:  #414141;
 
-$bg-section: rgba(255, 255, 255, 0.2);
+$error-clr: rgb(155, 0, 0);
+$success-clr: rgb(0, 155, 0);
+
+$bg-section: rgba(255, 255, 255, 0.25);
 $text-btn-clr: white;
