--- a/src/styles/sass/main.scss
+++ b/src/styles/sass/main.scss
@@ -18,16 +18,14 @@ html {
 }
 
 button {
+    cursor: pointer;
     height: 3.5rem;
     width: 50%;
-    font-weight: bold;
-    background: $primary-clr;
-    color: $text-btn-clr;
-    border-style: none;
-    border-radius: 0.5rem;
     font-size: 16px;
-    cursor: pointer;
+    color: $text-btn-clr;
+    background: $primary-clr;
     border: 1px solid $tertiary-clr;
+    border-radius: 0.5rem;
 }
 
 .bold {
@@ -40,13 +38,13 @@ a {
 }
 
 .success {
-    color: rgb(0, 130, 0);
+    color: $success-clr;
     text-align: center;
     font-size: 22px;
 }
 
 .error {
-    color: rgb(219, 19, 19);
+    color: $error-clr;
     margin-top: 5px;
     &_center {
         text-align: center;
