--- a/src/styles/sass/_Login.scss
+++ b/src/styles/sass/_Login.scss
@@ -13,23 +13,13 @@
         }
     }
     
-    &_section {
-        margin: auto;
-        background: $bg-section;
-        backdrop-filter: blur(5px);
-        border-radius: 0.5rem;
-        padding: 2rem 2rem 2rem 2rem;
-        width: 50%;
-        min-width: 250px;
-        max-width: 600px;
-    
-        &_header {
-            display: flex;
-            justify-content: space-between;
-            width: 100%;
-        }
+    &_section_header {
+        display: flex;
+        justify-content: space-between;
+        width: 100%;
     }
 }
+
 
 .form {
     margin-top: 10px;
