--- a/src/styles/sass/_variables.scss
+++ b/src/styles/sass/_variables.scss
@@ -1,6 +1,6 @@
 $primary-clr: #005d6d;
 $secondary-clr: #008dadbd;
-$tertiary-clr:  #414141;
+$text-clr:  #414141;
 
 $error-clr: rgb(155, 0, 0);
 $success-clr: rgb(0, 155, 0);
