--- a/src/styles/sass/main.scss
+++ b/src/styles/sass/main.scss
@@ -1,5 +1,7 @@
 @import 'variables';
 @import 'Login';
+@import 'Navbar';
+@import 'ErrorAuth';
 
 @font-face {
     font-family: 'Lato';
@@ -12,8 +14,10 @@
 }
 
 html {
+    position: relative;
     font-family: 'Lato';
     font-size: 16px;
+    color: $text-clr;
     background: url('img/groupomania-bg.jpg') fixed no-repeat;
 }
 
@@ -24,7 +28,7 @@ button {
     font-size: 16px;
     color: $text-btn-clr;
     background: $primary-clr;
-    border: 1px solid $tertiary-clr;
+    border: 1px solid $text-clr;
     border-radius: 0.5rem;
 }
 
@@ -33,8 +37,19 @@ button {
 }
 
 a {
-    color: $tertiary-clr;
+    color: $text-clr;
     text-decoration: none;
+}
+
+.bg_section {
+    background-color: $bg-section;
+    backdrop-filter: blur(5px);
+    border-radius: 0.5rem;
+    margin: auto;
+    padding: 2rem;
+    width: 50%;
+    min-width: 250px;
+    max-width: 600px;
 }
 
 .success {
