--- a/src/styles/sass/_ErrorAuth.scss
+++ b/src/styles/sass/_ErrorAuth.scss
@@ -4,11 +4,14 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: space-around;
     margin-top: 8rem !important;
+    width: 60%;
+    height: 150px;
 
     &_title {
         text-align: center;
-        margin-top: 0;
+        margin: 0;
         font-size: 25px;
     }
 
