add profil page + clean scss

--- a/src/styles/sass/_Login.scss
+++ b/src/styles/sass/_Login.scss
@@ -31,7 +31,7 @@
     margin-top: 10px;
     &_input {
         width: 99%;
-        height: 35px;
+        height: 1.8rem;
         margin-top: 5px;
         border: 1px solid rgb(80, 79, 79);
         border-radius: 0.5rem;
