--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -24,7 +24,7 @@
 }
 .form_input {
   width: 99%;
-  height: 35px;
+  height: 1.8rem;
   margin-top: 5px;
   border: 1px solid rgb(80, 79, 79);
   border-radius: 0.5rem;
@@ -102,15 +102,22 @@ nav {
   width: 15%;
   margin: 10px 15px 7px 0px;
 }
-.nav_container_link_icon {
-  font-size: 1.65rem;
-  color: #414141;
+
+.active_link {
+  color: #005d6d;
+  filter: brightness(1.5);
+  text-shadow: 0 0 16px rgba(0, 0, 0, 0.1803921569);
+}
+
+.link_icon {
+  font-size: 22px;
   transition: color 250ms ease-in-out;
   cursor: pointer;
 }
-.nav_container_link_icon:hover {
-  color: rgba(0, 141, 173, 0.7411764706);
-  filter: brightness(1.2);
+.link_icon:hover {
+  color: #005d6d;
+  filter: brightness(1.5);
+  text-shadow: 0 0 16px rgba(0, 0, 0, 0.1803921569);
 }
 
 .errorAuth_container {
@@ -134,18 +141,30 @@ nav {
 }
 
 @media screen and (max-width: 768px) {
-  .profil_container {
-    width: 70% !important;
-  }
   .profil_container_update {
     flex-direction: column;
   }
   .profil_container_update_photobox {
     width: 95% !important;
   }
+  .profil_container_update_photobox_photo {
+    height: 15rem !important;
+    border-radius: 10rem !important;
+  }
   .profil_container_update_infos {
     width: 95% !important;
     margin-top: 40px;
+  }
+  .profil_container_footer {
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    margin: auto;
+  }
+  .profil_container_footer_btn {
+    width: 100% !important;
+    margin: 0 !important;
+    margin-bottom: 15px !important;
   }
   .updateprofil_title {
     margin-top: 0 !important;
@@ -157,11 +176,12 @@ nav {
   }
 }
 .profil_container {
-  margin-top: 90px !important;
-  margin-bottom: 40px !important;
   width: 80%;
   min-width: 250px;
   max-width: 950px;
+  margin: auto;
+  margin-bottom: 40px !important;
+  margin-top: 120px !important;
 }
 .profil_container_title {
   margin-top: 0;
@@ -179,7 +199,7 @@ nav {
   text-align: center;
   margin-top: 20px;
   margin-bottom: 30px;
-  font-size: 21px;
+  font-size: 24px;
 }
 .profil_container_update_photobox {
   display: flex;
@@ -189,22 +209,41 @@ nav {
   width: 40%;
 }
 .profil_container_update_photobox_photo {
-  margin: 20px auto;
-  width: 150px;
-  height: 150px;
-  border-radius: 5rem;
+  width: 15rem;
+  height: 20rem;
+  border-radius: 2rem;
+  object-fit: cover;
+  box-shadow: 0 0 16px rgba(0, 0, 0, 0.1803921569);
 }
 .profil_container_update_infos {
   width: 40%;
 }
 
-.btn_update_infos {
-  height: 2.5rem;
+#file {
+  margin-top: 25px;
+}
+
+.btn_update_profil {
+  height: 2.2rem;
 }
 
 .separateBox {
   margin-top: -15px;
   border-left: 1px solid rgba(65, 65, 65, 0.3);
+}
+
+.profil_container_footer {
+  display: flex;
+  justify-content: flex-end;
+}
+.profil_container_footer_btn {
+  width: 50%;
+}
+
+.btn_deleteprofil {
+  margin-top: 25px;
+  margin-left: 5px;
+  background-color: rgb(156, 0, 0);
 }
 
 @font-face {
@@ -214,11 +253,6 @@ nav {
 @font-face {
   font-family: "Lato-Bold";
   src: url("fonts/Lato-Bold.ttf");
-}
-@media screen and (min-width: 360px) {
-  html {
-    min-width: 300px;
-  }
 }
 html {
   position: relative;
@@ -232,7 +266,7 @@ html {
 
 button {
   cursor: pointer;
-  height: 3.5rem;
+  height: 3.2rem;
   width: 50%;
   font-size: 16px;
   color: white;
@@ -240,12 +274,16 @@ button {
   border: 1px solid #414141;
   border-radius: 0.5rem;
 }
+button:hover {
+  box-shadow: 0 0 16px rgba(0, 0, 0, 0.1803921569);
+}
 
 .bold {
   font-family: "Lato-Bold";
 }
 
 a {
+  display: block;
   color: #414141;
   text-decoration: none;
 }
