--- a/src/styles/sass/_Login.scss
+++ b/src/styles/sass/_Login.scss
@@ -47,19 +47,18 @@
 .btn_form {
     background-color: $primary-clr;
     width: 100%;
-    transition: transform 300ms ease-in-out;
-    &:hover {
-         transform: scale(1.02);
-    }
+    height: 3.2rem;
 }
 
 button {
     &#signup {
         margin-right: 5px;
+        height: 3.2rem;
     }
 
     &#signin {
         margin-left: 5px;
+        height: 3.2rem;
     }
 
     &.inactive {
