--- a/src/styles/sass/_Navbar.scss
+++ b/src/styles/sass/_Navbar.scss
@@ -1,20 +1,18 @@
 @import 'variables';
 
-@media screen and (max-width: 768px) {
+@media(max-width: 768px) {
     .nav_container {
         &_title_welcome {
             display: none;
         }
 
-        &_link { 
-            &_icon {
-                margin-right: 30px;
-            }
-            &_logout_icon {
-                margin-right: 70px;
-            }
+        &_link {
+            margin-right: 50px !important;
         }
+    }
 
+    .link_icon {
+        margin-right: 40px;
     }
 }
 
@@ -50,13 +48,13 @@ nav {
         display: flex;
         justify-content: space-around;
         width: 15%;
-        margin: 10px 15px 7px 0px;
+        margin: 5px 30px 7px 0px;
     }
 }
 
 .active_link {
     color: $primary-clr;
-    filter: brightness(1.5);
+    filter: brightness(1.3);
     text-shadow: 0 0 16px #0000002e;
 }
 
@@ -66,7 +64,7 @@ nav {
     cursor: pointer;
     &:hover {
         color: $primary-clr;
-        filter: brightness(1.5);
+        filter: brightness(1.3);
         text-shadow: 0 0 16px #0000002e;
     }
 }
