--- a/src/styles/sass/_Profil.scss
+++ b/src/styles/sass/_Profil.scss
@@ -1,9 +1,11 @@
 @import 'variables';
 
-@media screen and (max-width: 768px) {
+@media(max-width: 768px) {
     .profil_container {
+        
         &_update {
             flex-direction: column;
+            align-items: center;
             &_photobox {
                 width: 95% !important;
                 &_photo {
@@ -17,14 +19,11 @@
             }
         }
         &_footer {
-            flex-direction: column;
-            align-items: center;
+            align-items: flex-end;
             width: 100%;
-            margin: auto;
             &_btn {
-                width: 100% !important;
-                margin: 0 !important;
-                margin-bottom: 15px !important;
+                width: 40% !important;
+                margin-top: 15px !important;
             }
         }
     }
@@ -37,6 +36,8 @@
     .separateBox {
         margin-top: 60px !important;
         border-top: 1px solid rgba(65, 65, 65, 0.3);
+        width: 100%;
+        z-index: 3;
     }
 }
 
@@ -48,11 +49,22 @@
     margin: auto;
     margin-bottom: 40px !important;
     margin-top: 120px !important;
-        
-        &_title {
-            margin-top: 0;
-            margin-bottom: 30px;
-            font-size: 25px;
+    z-index: 10;
+
+        &_header {
+            display: flex;
+            justify-content: space-between;
+            align-items: baseline;
+            
+            &_title {
+                margin-top: 0;
+                margin-bottom: 30px;
+                font-size: 25px;
+            }
+
+            &_icon {
+                font-size: 25px;
+            }
         }
 
         &_update {
@@ -108,13 +120,17 @@
 .profil_container_footer {
     display: flex;
     justify-content: flex-end;
+    
     &_btn {
-        width: 50%;
+        font-size: 12px;
+        width: 25%;
+        height: auto;
+        margin-top: 15px;
+        background-color: rgb(156, 0, 0);
+        opacity: 0.5;
+        transition: opacity 300ms ease-in-out;
+        &:hover {
+            opacity: 1;
+        }
     }
-}
-
-.btn_deleteprofil {
-    margin-top: 25px;
-    margin-left: 5px;
-    background-color: rgb(156, 0, 0);
 }
