--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -26,20 +26,22 @@
   width: 99%;
   height: 1.8rem;
   margin-top: 5px;
+  margin-bottom: 10px;
   border: 1px solid rgb(80, 79, 79);
   border-radius: 0.5rem;
   font-size: 16px;
-  background: rgba(255, 255, 255, 0.65);
+  background: rgba(255, 255, 255, 0.7);
 }
 .form_input:focus {
-  outline: solid #005d6d;
-  border-color: #005d6d;
+  outline: solid #1e6e7d;
+  border-color: #1e6e7d;
 }
 
 .btn_form {
-  background-color: #005d6d;
+  background-color: #1e6e7d;
   width: 100%;
-  height: 3.2rem;
+  margin-top: 10px;
+  height: 3.1rem;
 }
 
 button#signup {
@@ -51,11 +53,13 @@ button#signin {
   height: 3.2rem;
 }
 button.inactive {
-  background-color: rgba(0, 141, 173, 0.7411764706);
-  transition: background-color 300ms ease-in-out;
+  color: #252525;
+  background-color: transparent;
+  transition: all 400ms ease-in-out;
 }
 button.inactive:hover {
-  background-color: #005d6d;
+  color: white;
+  background-color: #1e6e7d;
 }
 
 @media (max-width: 768px) {
@@ -80,7 +84,7 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: rgba(255, 255, 255, 0.2);
+  background-color: rgba(255, 255, 255, 0.35);
   backdrop-filter: blur(15px);
   margin: 0 -7px;
   margin-bottom: 0;
@@ -103,18 +107,18 @@ nav {
 }
 
 .active_link {
-  color: #005d6d;
-  filter: brightness(1.3);
+  color: #1e6e7d;
   text-shadow: 0 0 16px rgba(0, 0, 0, 0.1803921569);
 }
 
 .link_icon {
   font-size: 22px;
   transition: color 250ms ease-in-out;
+  filter: brightness(1.2);
   cursor: pointer;
 }
 .link_icon:hover {
-  color: #005d6d;
+  color: #1e6e7d;
   filter: brightness(1.3);
   text-shadow: 0 0 16px rgba(0, 0, 0, 0.1803921569);
 }
@@ -165,7 +169,7 @@ nav {
   }
   .updateprofil_title {
     margin-top: 0 !important;
-    margin-bottom: 40px !important;
+    margin-bottom: 20px !important;
   }
   .separateBox {
     margin-top: 60px !important;
@@ -205,7 +209,7 @@ nav {
 }
 .profil_container_update_title {
   text-align: center;
-  margin-top: 20px;
+  margin-top: 5px;
   margin-bottom: 30px;
   font-size: 24px;
 }
@@ -218,13 +222,49 @@ nav {
 }
 .profil_container_update_photobox_photo {
   width: 15rem;
-  height: 20rem;
-  border-radius: 2rem;
+  height: 15rem;
+  border-radius: 10rem;
   object-fit: cover;
   box-shadow: 0 0 16px rgba(0, 0, 0, 0.1803921569);
 }
 .profil_container_update_infos {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   width: 40%;
+  font-size: 18px;
+}
+.profil_container_update_infos_input {
+  display: flex;
+  align-items: center;
+  margin-top: 10px;
+}
+.profil_container_update_infos_input_title {
+  margin: 10px 0;
+}
+.profil_container_update_infos_input_subtitle {
+  margin: 0;
+}
+.profil_container_update_infos_input_icon {
+  margin-bottom: 0;
+  margin-left: 7px;
+  font-size: 15px;
+  opacity: 0.7;
+  cursor: pointer;
+}
+.profil_container_update_infos_input_icon:hover {
+  color: #1e6e7d;
+  opacity: 1;
+}
+
+.update_infos_input {
+  margin-bottom: 10px;
+}
+
+.error_profil {
+  margin-bottom: 5px;
+  margin-top: -8px !important;
+  font-size: 15px;
 }
 
 #file {
@@ -232,7 +272,7 @@ nav {
 }
 
 .btn_update_profil {
-  height: 2.2rem;
+  height: 2rem;
 }
 
 .separateBox {
@@ -276,7 +316,7 @@ nav {
   width: 45%;
   min-width: 330px;
   max-width: 400px;
-  border: 1px solid #005d6d;
+  border: 1px solid #1e6e7d;
   border-radius: 0.6rem;
   box-shadow: 0 0 16px rgba(0, 0, 0, 0.1803921569);
 }
@@ -313,9 +353,9 @@ nav {
 
 .btn_cancel {
   margin-right: 5px;
-  color: #414141;
+  color: #252525;
   background-color: white;
-  border-color: #005d6d;
+  border-color: #1e6e7d;
 }
 .btn_confirm {
   margin-left: 5px;
@@ -333,8 +373,9 @@ html {
   position: relative;
   font-family: "Lato";
   font-size: 16px;
-  color: #414141;
-  background: url("img/groupomania-bg.jpg") fixed no-repeat;
+  color: #252525;
+  background: url("img/groupomania-bg1.jpg") fixed no-repeat;
+  background-size: cover;
   min-width: 365px;
   max-width: 2400px;
 }
@@ -344,8 +385,8 @@ button {
   width: 50%;
   font-size: 16px;
   color: white;
-  background: #005d6d;
-  border: 1px solid #414141;
+  background: #1e6e7d;
+  border: 1px solid #252525;
   border-radius: 0.5rem;
   transition: transform 300ms ease-in-out;
 }
@@ -360,13 +401,13 @@ button:hover {
 
 a {
   display: block;
-  color: #414141;
+  color: #252525;
   text-decoration: none;
 }
 
 .bg_section {
-  background-color: rgba(255, 255, 255, 0.2);
-  backdrop-filter: blur(5px);
+  background-color: rgba(255, 255, 255, 0.35);
+  backdrop-filter: blur(20px);
   border-radius: 0.5rem;
   margin: auto;
   padding: 2rem;
@@ -379,12 +420,13 @@ a {
 }
 
 .error {
-  color: rgb(155, 0, 0);
-  margin-top: 5px;
+  color: rgb(140, 0, 0);
+  margin-top: -5px;
+  margin-bottom: 10px;
 }
 .error_center {
   text-align: center;
-  margin-top: 10px;
+  margin-top: 5px;
 }
 
 /*# sourceMappingURL=main.css.map */
