--- a/src/styles/sass/_variables.scss
+++ b/src/styles/sass/_variables.scss
@@ -1,11 +1,11 @@
-$primary-clr: #005d6d;
-$secondary-clr: #008dadbd;
+$primary-clr: #1e6e7d;
+$secondary-clr: #1b9cbabd;
 
-$text-clr:  #414141;
+$text-clr:  #252525;
 $text-btn-clr: white;
 
-$bg-section: rgba(255, 255, 255, 0.2);
+$bg-section: rgba(255, 255, 255, 0.350);
 
-$error-clr: rgb(155, 0, 0);
+$error-clr: rgb(140, 0, 0);
 $success-clr: rgb(0, 155, 0);
 
