--- a/src/styles/sass/main.scss
+++ b/src/styles/sass/main.scss
@@ -20,7 +20,8 @@ html {
     font-family: 'Lato';
     font-size: 16px;
     color: $text-clr;
-    background: url('img/groupomania-bg.jpg') fixed no-repeat;
+    background: url('img/groupomania-bg1.jpg') fixed no-repeat;
+    background-size:cover;
     min-width: 365px;
     max-width: 2400px;
 }
@@ -52,7 +53,7 @@ a {
 
 .bg_section {
     background-color: $bg-section;
-    backdrop-filter: blur(5px);
+    backdrop-filter: blur(20px);
     border-radius: 0.5rem;
     margin: auto;
     padding: 2rem;
@@ -66,9 +67,10 @@ a {
 
 .error {
     color: $error-clr;
-    margin-top: 5px;
+    margin-top: -5px;
+    margin-bottom: 10px;
     &_center {
         text-align: center;
-        margin-top: 10px;
+        margin-top: 5px;
     }
 } 
