--- a/src/styles/sass/_Login.scss
+++ b/src/styles/sass/_Login.scss
@@ -33,10 +33,11 @@
         width: 99%;
         height: 1.8rem;
         margin-top: 5px;
+        margin-bottom: 10px;
         border: 1px solid rgb(80, 79, 79);
         border-radius: 0.5rem;
         font-size: 16px;
-        background: rgba(255, 255, 255, 0.65);
+        background: rgba(255, 255, 255, 0.7);
         &:focus {
             outline: solid $primary-clr;
             border-color: $primary-clr;
@@ -47,7 +48,8 @@
 .btn_form {
     background-color: $primary-clr;
     width: 100%;
-    height: 3.2rem;
+    margin-top: 10px;
+    height: 3.1rem;
 }
 
 button {
@@ -62,9 +64,11 @@ button {
     }
 
     &.inactive {
-        background-color: $secondary-clr;
-        transition: background-color 300ms ease-in-out;
+        color: $text-clr;
+        background-color: transparent;
+        transition: all 400ms ease-in-out;
         &:hover {
+            color: $text-btn-clr;
             background-color: $primary-clr;
         }
     }
