--- a/src/styles/sass/_variables.scss
+++ b/src/styles/sass/_variables.scss
@@ -1,10 +1,11 @@
 $primary-clr: #1e6e7d;
 $secondary-clr: #1b9cbabd;
 
-$text-clr:  #252525;
+$text-clr:  #000000;
 $text-btn-clr: white;
 
-$bg-section: rgba(255, 255, 255, 0.350);
+$bg-form-section: rgba(255, 255, 255, 0.4);
+$bg-section: rgba(255, 255, 255, 0.6);
 
 $error-clr: rgb(140, 0, 0);
 $success-clr: rgb(0, 155, 0);
