--- a/src/styles/sass/_Login.scss
+++ b/src/styles/sass/_Login.scss
@@ -14,6 +14,7 @@
     }
     
     &_section {
+        background-color: $bg-form-section !important;
         width: 50%;
         min-width: 250px;
         max-width: 600px;
