--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -130,8 +130,9 @@ nav {
   align-items: center;
   justify-content: space-around;
   margin-top: 8rem !important;
-  width: 60%;
-  height: 150px;
+  width: 56%;
+  min-width: 260px;
+  max-width: 430px;
 }
 .errorAuth_container_title {
   text-align: center;
@@ -142,6 +143,11 @@ nav {
   display: flex;
   justify-content: center;
   width: 100%;
+}
+.errorAuth_container button {
+  margin-top: 20px;
+  width: 200px;
+  height: 2.5rem;
 }
 
 @media (max-width: 768px) {
